--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Hand Gestures → Particle Templates (Three.js + MediaPipe)</title>
+  <title>3D Particles + Old Gestures + New Templates</title>
   <style>
     html, body { margin: 0; height: 100%; overflow: hidden; background: #000; font-family: system-ui, Arial; }
     #ui {
       position: fixed; top: 12px; left: 12px; z-index: 10;
       color: #fff; background: rgba(0,0,0,.55); padding: 10px 12px; border-radius: 12px;
-      backdrop-filter: blur(8px); max-width: 360px;
+      backdrop-filter: blur(8px); max-width: 380px;
     }
     #ui button {
       border: 0; padding: 8px 10px; border-radius: 10px; cursor: pointer;
@@ -18,7 +18,7 @@
     #status { font-size: 13px; opacity: .9; margin-top: 6px; line-height: 1.35; }
     #debug { font-size: 12px; opacity: .85; margin-top: 6px; white-space: pre-wrap; }
     #video {
-      position: fixed; right: 12px; bottom: 12px; width: 220px; height: 165px;
+      position: fixed; right: 12px; bottom: 12px; width: 240px; height: 180px;
       transform: scaleX(-1);
       border-radius: 14px; opacity: 0.18; z-index: 9; object-fit: cover;
       border: 1px solid rgba(255,255,255,0.12);
@@ -28,10 +28,10 @@
 </head>
 <body>
   <div id="ui">
-    <div><b>Hand Gestures → Particle Templates</b></div>
+    <div><b>3D Particles (Three.js) + Old Gestures (MediaPipe)</b></div>
     <button id="startBtn">Start Camera</button>
     <button id="stopBtn" disabled>Stop</button>
-    <div id="status">Not started.</div>
+    <div id="status">Ready.</div>
     <div id="debug"></div>
   </div>
 
@@ -46,38 +46,39 @@
 
   <script>
     /***********************
-     * THREE.JS SETUP
+     * THREE SETUP
      ***********************/
     const scene = new THREE.Scene();
     scene.fog = new THREE.FogExp2(0x000000, 0.07);
 
-    const camera3D = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.01, 1000);
-    camera3D.position.set(0, 0.5, 9);
+    const cam3D = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.01, 1000);
+    cam3D.position.set(0, 0.4, 9);
 
     const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: false });
     renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
+    renderer.setPixelRatio(Math.min(devicePixelRatio, 2));
     document.body.appendChild(renderer.domElement);
 
-    // Lights (subtle)
     const light = new THREE.DirectionalLight(0xffffff, 0.35);
     light.position.set(2, 4, 5);
     scene.add(light);
+
+    function setStatus(t) { document.getElementById("status").textContent = t; }
+    function setDebug(t) { document.getElementById("debug").textContent = t; }
 
     /***********************
      * PARTICLES
      ***********************/
     const particleCount = 7000;
+
     const geometry = new THREE.BufferGeometry();
-    const positions = new Float32Array(particleCount * 3);
-    const colors = new Float32Array(particleCount * 3);
+    const positions  = new Float32Array(particleCount * 3);
+    const colors     = new Float32Array(particleCount * 3);
     const velocities = new Float32Array(particleCount * 3);
+    const targets    = new Float32Array(particleCount * 3);
 
-    // Targets (template points)
-    const targets = new Float32Array(particleCount * 3);
-
-    // Initialize random positions and colors
     const tmpColor = new THREE.Color();
+
     for (let i = 0; i < particleCount; i++) {
       const ix = i * 3;
       positions[ix + 0] = (Math.random() - 0.5) * 6;
@@ -109,37 +110,26 @@
     const points = new THREE.Points(geometry, material);
     scene.add(points);
 
-    // Parameters controlled by gestures
-    let attraction = 0.06;   // pull particles toward targets
-    let jitter = 0.01;       // random motion
-    let spread = 1.0;        // how "wide" template is
-    let hueShift = 0.0;      // global color shift
-    let explode = 0.0;       // fireworks burst strength
+    // dynamics (kept "old" style: attract to target + jitter)
+    let attraction = 0.07;
+    let jitter = 0.01;
+    let spread = 1.0;
+    let explode = 0.0;
+    let hueShift = 0.0;
+
     let currentTemplate = "hearts";
 
-    function setStatus(text) {
-      document.getElementById("status").textContent = text;
-    }
-
-    function setDebug(text) {
-      document.getElementById("debug").textContent = text;
-    }
-
     /***********************
-     * TEMPLATE POINT FUNCTIONS
+     * TEMPLATE FUNCTIONS (OLD + NEW)
      ***********************/
     function heartPoint(i, N) {
-      // Classic 2D heart curve extruded a bit
       const t = (i / N) * Math.PI * 2;
       const x = 16 * Math.pow(Math.sin(t), 3);
       const y = 13 * Math.cos(t) - 5 * Math.cos(2*t) - 2 * Math.cos(3*t) - Math.cos(4*t);
-      // normalize & scale
       return { x: (x / 18) * 2.2, y: (y / 18) * 2.2, z: (Math.random() - 0.5) * 0.35 };
     }
 
     function saturnPoint(i, N) {
-      // Sphere + ring blend
-      const t = i / N;
       const ringRatio = 0.55;
       const pickRing = (Math.random() < ringRatio);
 
@@ -147,14 +137,13 @@
         const a = Math.random() * Math.PI * 2;
         const r = 2.2 + (Math.random() - 0.5) * 0.35;
         const tilt = 0.35;
-        const x = Math.cos(a) * r;
-        const z = Math.sin(a) * r;
-        const y = (Math.sin(a) * r) * tilt * 0.15;
-        return { x, y, z };
+        return {
+          x: Math.cos(a) * r,
+          y: (Math.sin(a) * r) * tilt * 0.15,
+          z: Math.sin(a) * r
+        };
       } else {
-        // planet sphere
-        const u = Math.random();
-        const v = Math.random();
+        const u = Math.random(), v = Math.random();
         const theta = 2 * Math.PI * u;
         const phi = Math.acos(2*v - 1);
         const r = 1.0 + (Math.random() - 0.5) * 0.15;
@@ -167,20 +156,18 @@
     }
 
     function flowerPoint(i, N) {
-      // Polar rose: r = cos(kθ)
       const k = 5;
       const t = (i / N) * Math.PI * 2;
       const r = Math.cos(k * t);
-      const x = r * Math.cos(t) * 2.6;
-      const y = r * Math.sin(t) * 2.6;
-      const z = (Math.random() - 0.5) * 0.45;
-      return { x, y, z };
+      return {
+        x: r * Math.cos(t) * 2.6,
+        y: r * Math.sin(t) * 2.6,
+        z: (Math.random() - 0.5) * 0.45
+      };
     }
 
     function fireworksPoint(i, N) {
-      // A sphere shell (burst)
-      const u = Math.random();
-      const v = Math.random();
+      const u = Math.random(), v = Math.random();
       const theta = 2 * Math.PI * u;
       const phi = Math.acos(2*v - 1);
       const r = 2.8 + (Math.random() - 0.5) * 0.2;
@@ -191,28 +178,28 @@
       };
     }
 
+    // ===== NEW TEMPLATES =====
     function galaxyPoint(i, N) {
-      // Spiral galaxy
       const t = i / N;
       const turns = 7;
       const angle = t * Math.PI * 2 * turns;
-      const radius = 0.2 + 3.0 * Math.sqrt(t);
-      const y = (Math.random() - 0.5) * 0.7 * (1.0 - t);
-      // add arm noise
-      const arm = (Math.random() - 0.5) * 0.25;
+      const radius = 0.25 + 3.0 * Math.sqrt(t);
+      const y = (Math.random() - 0.5) * 0.8 * (1.0 - t);
+      const armNoise = (Math.random() - 0.5) * 0.25;
+
       return {
-        x: Math.cos(angle + arm) * radius,
+        x: Math.cos(angle + armNoise) * radius,
         y,
-        z: Math.sin(angle + arm) * radius,
+        z: Math.sin(angle + armNoise) * radius,
       };
     }
 
     function spiralPoint(i, N) {
-      // Helix spiral
       const t = i / N;
       const angle = t * Math.PI * 2 * 10;
-      const radius = 0.5 + 2.2 * t;
+      const radius = 0.6 + 2.4 * t;
       const y = (t - 0.5) * 4.0;
+
       return {
         x: Math.cos(angle) * radius,
         y,
@@ -225,8 +212,8 @@
       saturn: saturnPoint,
       flower: flowerPoint,
       fireworks: fireworksPoint,
-      galaxy: galaxyPoint,
-      spiral: spiralPoint,
+      galaxy: galaxyPoint,   // NEW
+      spiral: spiralPoint    // NEW
     };
 
     function rebuildTargets(templateName) {
@@ -247,11 +234,10 @@
       setStatus(`Template: ${name}`);
     }
 
-    // init default target shape
     rebuildTargets(currentTemplate);
 
     /***********************
-     * ANIMATION LOOP
+     * ANIMATION
      ***********************/
     const clock = new THREE.Clock();
 
@@ -259,28 +245,25 @@
       requestAnimationFrame(animate);
       const dt = Math.min(clock.getDelta(), 0.033);
 
-      // slow scene rotation for nice look
       points.rotation.y += dt * 0.12;
       points.rotation.x += dt * 0.05;
 
-      // update particles toward targets
       for (let i = 0; i < particleCount; i++) {
         const ix = i * 3;
-
-        // attraction to targets
-        const tx = targets[ix + 0];
-        const ty = targets[ix + 1];
-        const tz = targets[ix + 2];
 
         const px = positions[ix + 0];
         const py = positions[ix + 1];
         const pz = positions[ix + 2];
 
+        const tx = targets[ix + 0];
+        const ty = targets[ix + 1];
+        const tz = targets[ix + 2];
+
+        // attraction force toward target
         const ax = (tx - px) * attraction;
         const ay = (ty - py) * attraction;
         const az = (tz - pz) * attraction;
 
-        // velocity integrates
         velocities[ix + 0] += ax * dt * 60;
         velocities[ix + 1] += ay * dt * 60;
         velocities[ix + 2] += az * dt * 60;
@@ -290,11 +273,11 @@
         velocities[ix + 1] += (Math.random() - 0.5) * jitter;
         velocities[ix + 2] += (Math.random() - 0.5) * jitter;
 
-        // fireworks burst pulse
+        // fireworks pulse
         if (explode > 0.001) {
-          velocities[ix + 0] += (px) * explode * 0.002;
-          velocities[ix + 1] += (py) * explode * 0.002;
-          velocities[ix + 2] += (pz) * explode * 0.002;
+          velocities[ix + 0] += px * explode * 0.002;
+          velocities[ix + 1] += py * explode * 0.002;
+          velocities[ix + 2] += pz * explode * 0.002;
         }
 
         // damping
@@ -302,56 +285,53 @@
         velocities[ix + 1] *= 0.92;
         velocities[ix + 2] *= 0.92;
 
+        // integrate
         positions[ix + 0] += velocities[ix + 0];
         positions[ix + 1] += velocities[ix + 1];
         positions[ix + 2] += velocities[ix + 2];
 
-        // color shift (gentle)
-        const cix = ix;
-        // adjust hue over time (approx: rotate RGB a tiny bit by lerp)
-        // We'll keep it simple: modulate brightness slightly with hueShift
+        // gentle color shimmer
         const brighten = 0.6 + 0.4 * Math.sin((i * 0.0008) + hueShift);
-        colors[cix + 0] = Math.min(1, colors[cix + 0] * 0.98 + brighten * 0.02);
-        colors[cix + 1] = Math.min(1, colors[cix + 1] * 0.98 + brighten * 0.02);
-        colors[cix + 2] = Math.min(1, colors[cix + 2] * 0.98 + brighten * 0.02);
+        colors[ix + 0] = Math.min(1, colors[ix + 0] * 0.98 + brighten * 0.02);
+        colors[ix + 1] = Math.min(1, colors[ix + 1] * 0.98 + brighten * 0.02);
+        colors[ix + 2] = Math.min(1, colors[ix + 2] * 0.98 + brighten * 0.02);
       }
 
       explode *= 0.93;
+      hueShift += 0.03;
 
       geometry.attributes.position.needsUpdate = true;
       geometry.attributes.color.needsUpdate = true;
 
-      renderer.render(scene, camera3D);
+      renderer.render(scene, cam3D);
     }
-
     animate();
 
     window.addEventListener("resize", () => {
-      camera3D.aspect = window.innerWidth / window.innerHeight;
-      camera3D.updateProjectionMatrix();
+      cam3D.aspect = window.innerWidth / window.innerHeight;
+      cam3D.updateProjectionMatrix();
       renderer.setSize(window.innerWidth, window.innerHeight);
     });
 
     /***********************
-     * MEDIAPIPE HANDS + GESTURES
+     * MEDIAPIPE HANDS + OLD GESTURES (UPDATED SWITCHING)
      ***********************/
     const videoEl = document.getElementById("video");
     let cam = null;
 
-    // Gesture mapping -> templates
+    // Old gestures mapped to templates (new templates included)
     const gestureToTemplate = {
-      PALM: "galaxy",
+      PALM: "galaxy",      // NEW template on old gesture
+      PINCH: "spiral",     // NEW template on old gesture
       FIST: "fireworks",
       ONE: "saturn",
       V: "flower",
       ROCK: "hearts",
-      PINCH: "spiral",
     };
 
-    // Cooldown + stability
+    // Anti-flicker
     let lastSwitchTime = 0;
     const SWITCH_COOLDOWN_MS = 650;
-
     let gestureHistory = [];
     const HISTORY = 7;
 
@@ -362,44 +342,42 @@
     }
 
     function fingerUp(lm, tip, pip) {
-      // For many webcams: smaller y means higher on screen => finger up
       return lm[tip].y < lm[pip].y;
     }
 
     function thumbUpBasic(lm) {
-      // Basic rule: thumb tip farther from thumb MCP than a threshold
-      // (works okay without left/right detection)
       return dist2D(lm[4], lm[2]) > 0.06;
     }
 
     function getFingerState(lm) {
-      const indexUp  = fingerUp(lm, 8, 6);
-      const middleUp = fingerUp(lm, 12, 10);
-      const ringUp   = fingerUp(lm, 16, 14);
-      const pinkyUp  = fingerUp(lm, 20, 18);
-      const tUp = thumbUpBasic(lm);
-      return { thumbUp: tUp, indexUp, middleUp, ringUp, pinkyUp };
+      return {
+        thumbUp: thumbUpBasic(lm),
+        indexUp:  fingerUp(lm, 8, 6),
+        middleUp: fingerUp(lm, 12, 10),
+        ringUp:   fingerUp(lm, 16, 14),
+        pinkyUp:  fingerUp(lm, 20, 18),
+      };
     }
 
     function classifyGesture(lm) {
       const f = getFingerState(lm);
 
-      const pinch = dist2D(lm[4], lm[8]) < 0.035; // thumb tip to index tip close
-      if (pinch) return "PINCH";
+      // PINCH (thumb tip close to index tip)
+      if (dist2D(lm[4], lm[8]) < 0.035) return "PINCH";
 
-      // FIST: all down
+      // FIST
       if (!f.thumbUp && !f.indexUp && !f.middleUp && !f.ringUp && !f.pinkyUp) return "FIST";
 
-      // PALM: all up
+      // PALM
       if (f.thumbUp && f.indexUp && f.middleUp && f.ringUp && f.pinkyUp) return "PALM";
 
-      // ONE: index only
+      // ONE (index only)
       if (!f.thumbUp && f.indexUp && !f.middleUp && !f.ringUp && !f.pinkyUp) return "ONE";
 
-      // V: index + middle
+      // V (index + middle)
       if (!f.thumbUp && f.indexUp && f.middleUp && !f.ringUp && !f.pinkyUp) return "V";
 
-      // ROCK: thumb + index + pinky
+      // ROCK (thumb + index + pinky)
       if (f.thumbUp && f.indexUp && !f.middleUp && !f.ringUp && f.pinkyUp) return "ROCK";
 
       return "UNKNOWN";
@@ -412,50 +390,43 @@
       const counts = {};
       for (const x of gestureHistory) counts[x] = (counts[x] || 0) + 1;
 
-      let best = "UNKNOWN";
-      let bestCount = 0;
+      let best = "UNKNOWN", bestCount = 0;
       for (const [k, v] of Object.entries(counts)) {
         if (v > bestCount) { best = k; bestCount = v; }
       }
-
-      // require at least 4/7 frames consistent
       return bestCount >= 4 ? best : "UNKNOWN";
     }
 
-    function applyGestureControls(gesture, lm) {
-      // Extra dynamics based on hand openness, pinch distance etc.
-      // Measure openness: average distance wrist->tips
+    function applyHandDynamics(lm, gesture) {
+      // Use openness to control spread/attraction smoothly
       const wrist = lm[0];
       const tips = [lm[4], lm[8], lm[12], lm[16], lm[20]];
       let avg = 0;
       for (const t of tips) avg += dist2D(wrist, t);
       avg /= tips.length;
 
-      // Map avg openness into spread
-      spread = 0.9 + (avg * 2.0); // usually 0.9..2.3 range
+      spread = 0.9 + (avg * 2.0);
       spread = Math.max(0.8, Math.min(spread, 2.7));
 
-      // jitter & attraction feel
       attraction = 0.05 + (avg * 0.05);
       attraction = Math.max(0.04, Math.min(attraction, 0.12));
 
       jitter = 0.006 + (1.8 - spread) * 0.008;
       jitter = Math.max(0.003, Math.min(jitter, 0.02));
 
-      // hue shift changes slowly while palm/v etc.
-      hueShift += 0.06;
+      // refresh target spacing when spread changes significantly
+      // (cheap check: rebuild every few frames by small randomness)
+      if (Math.random() < 0.07) rebuildTargets(currentTemplate);
 
-      // Fireworks: if FIST, pulse explode stronger
-      if (gesture === "FIST") {
-        explode = Math.min(1.0, explode + 0.08);
-      }
+      // fireworks punch
+      if (gesture === "FIST") explode = Math.min(1.0, explode + 0.08);
     }
 
     function maybeSwitchTemplate(gesture) {
-      const now = performance.now();
       const next = gestureToTemplate[gesture];
       if (!next) return;
 
+      const now = performance.now();
       if (now - lastSwitchTime < SWITCH_COOLDOWN_MS) return;
 
       if (next !== currentTemplate) {
@@ -477,34 +448,35 @@
 
     hands.onResults((results) => {
       if (!results.multiHandLandmarks || results.multiHandLandmarks.length === 0) {
-        setDebug(`Gesture: (no hand)\nTemplate: ${currentTemplate}\nSpread: ${spread.toFixed(2)}  Attraction: ${attraction.toFixed(2)}  Jitter: ${jitter.toFixed(3)}`);
+        setDebug(`Gesture: (no hand)
+Template: ${currentTemplate}
+Mappings: PALM→galaxy | PINCH→spiral | FIST→fireworks | ONE→saturn | V→flower | ROCK→hearts`);
         return;
       }
 
       const lm = results.multiHandLandmarks[0];
 
-      const gRaw = classifyGesture(lm);
-      const g = stableGesture(gRaw);
+      const raw = classifyGesture(lm);
+      const g = stableGesture(raw);
 
-      applyGestureControls(g, lm);
+      applyHandDynamics(lm, g);
       if (g !== "UNKNOWN") maybeSwitchTemplate(g);
 
-      setDebug(
-        `Gesture: ${g} (raw: ${gRaw})\n` +
-        `Template: ${currentTemplate}\n` +
-        `Spread: ${spread.toFixed(2)}  Attraction: ${attraction.toFixed(2)}  Jitter: ${jitter.toFixed(3)}\n` +
-        `Mappings: PALM→galaxy | FIST→fireworks | ONE→saturn | V→flower | ROCK→hearts | PINCH→spiral`
-      );
+      setDebug(`Gesture: ${g} (raw: ${raw})
+Template: ${currentTemplate}
+Spread: ${spread.toFixed(2)}  Attraction: ${attraction.toFixed(2)}  Jitter: ${jitter.toFixed(3)}
+Mappings: PALM→galaxy | PINCH→spiral | FIST→fireworks | ONE→saturn | V→flower | ROCK→hearts`);
     });
 
+    /***********************
+     * CAMERA CONTROL
+     ***********************/
     async function startCamera() {
       setStatus("Starting camera...");
       document.getElementById("startBtn").disabled = true;
 
       cam = new Camera(videoEl, {
-        onFrame: async () => {
-          await hands.send({ image: videoEl });
-        },
+        onFrame: async () => { await hands.send({ image: videoEl }); },
         width: 640,
         height: 480
       });
@@ -518,9 +490,7 @@
       try {
         if (cam) cam.stop();
         const stream = videoEl.srcObject;
-        if (stream) {
-          for (const track of stream.getTracks()) track.stop();
-        }
+        if (stream) for (const track of stream.getTracks()) track.stop();
         videoEl.srcObject = null;
       } catch (e) {}
       cam = null;
@@ -533,9 +503,10 @@
     document.getElementById("startBtn").addEventListener("click", startCamera);
     document.getElementById("stopBtn").addEventListener("click", stopCamera);
 
-    // Start with default template display
     setStatus(`Ready. Template: ${currentTemplate}`);
-    setDebug(`Gesture: (none)\nTemplate: ${currentTemplate}\nMappings: PALM→galaxy | FIST→fireworks | ONE→saturn | V→flower | ROCK→hearts | PINCH→spiral`);
+    setDebug(`Gesture: (none)
+Template: ${currentTemplate}
+Mappings: PALM→galaxy | PINCH→spiral | FIST→fireworks | ONE→saturn | V→flower | ROCK→hearts`);
   </script>
 </body>
 </html>
